--- a/pdfFiles/templates/index.html
+++ b/pdfFiles/templates/index.html
@@ -211,7 +211,8 @@
             </div>
 
         </div>
-        <div>Matières enseignées</div>
+        {% if matieres %}
+        <div class="mt-3">Matières enseignées</div>
         <table class="table table-info table-striped">
             <tr>
               <th scope="col">#</th>
@@ -228,6 +229,7 @@
             {% endfor %}
 
         </table>
+        {% endif %}
     
     <div class="row">
         <div class="receipt-header receipt-header-mid receipt-footer row w-100">
@@ -238,7 +240,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-
+                    <a target="_blank" href="https://tutor.smaartschool.com/" title="ouvrir managersmaartpro">https://tutor.smaartschool.com/</a>
                 </div>
             </div>
             
